[package]
name = "cdn77-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
chrono = "0.4.19"
dotenv = "0.15.0"
reqwest = { version = "0.11.10", features = ["serde_json", "json"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = { version = "1.0.81" }
tokio = { version = "1", features = ["full"] }
openssl = { version = "*", features = ["vendored"] }
